# sst

./: package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: handlers.rs  logger.rs  main.rs  model.rs  setup.rs
src-tauri/sst_core/: Cargo.toml  sub.json
src-tauri/sst_core/src/: config.rs  init.rs  lib.rs  mod.rs  model.rs  sub.rs  utils.rs
src/models/: index.ts
src/routers/: index.ts
src/views/: Home.vue
