[package]
name = "sst"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = ["./sst_core"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-sidecar", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sst_core = {path = "sst_core"}
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
tracing-appender = "0.2.3"
color-eyre = "0.6.2"
tracing-error = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
