[package]
name = "sst_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
base64 = "0.21.7"
serde = {version = "1.0",features = ["derive"]}
serde_json = {version = "1.0"}
rust-embed = {version = "8.2.0"}
home = "0.5.9"
log = "0.4.20"
urlencoding = "2.1.3"
utf8_slice = "1.0.0"
chrono = { version = "0.4.34", features = ["serde"] }
